tests/types/errors/optional_call_without_check.mog
type Dog struct {
    bark() { return "woof" }
}

var maybeDog Dog? = Dog()
maybeDog()
